HIVE-29483: Clean up comments and remove fork-only GitHub Actions workflow